🐛 [fix] works section mobile height (170vh>100%)

--- a/styles/components/main_workbox.css
+++ b/styles/components/main_workbox.css
@@ -74,7 +74,7 @@
 
 @media screen and (max-width: 1024px) {
     .works {
-        height: 145vh;
+        height: 100%;
         margin-bottom: 80px;
     }
 
